--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Angular Controller</title>
 	<script src='bower_components/angular/angular.min.js'></script>
+	<script src='controllers.js'></script>
 </head>
 <body>
 	
