--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
 	 <span>{{todo.remainging}} of {{todo.list.length}} remaining</span>
 	 	<a href="#" ng-click="todo.delete()">Delete</a>
 		<ul>
-			<li ng-repeat= "todo in todo.list">
-				<input type="checkbox" name="done" ng-model="todo.done">
-				<span>{{todo.text}}</span>
+			<li ng-repeat= "i in todo.list">
+				<input type="checkbox" ng-model="i.done">
+				<span class='donde -{{i.done}}'>{{i.text}}</span>
 			</li>
 		</ul>
+
+		<form ng-submit="todo.add()">
+			<input type="text" ng-model="todo.todoText" placeholder="add a new todo to your list">
+			<input type="submit" value="Add">
+		</form>
 	</div>
 </body>
 </html>
